fixed contact section on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -449,16 +449,16 @@ width: 100%;
 }
 
 .form{
-  width: 100%;
+  width: 80%;
   padding: 20px;
   display: block;
   text-align: center;
-  margin-left: 8vw;
+  margin-left: 15vw;
   margin-top: -10vw;
 }
 
 .form-group{
-  width: 100%;
+  width: 80%;
   display: block;
   width: 80%;
 }
@@ -546,7 +546,8 @@ width: 100%;
     margin-left: -5vw;
   }
   .form{
-    width: 100vw;
+    width: 300px;
+    margin-left: 60px;
   }
 }
 
